some random changes in file and shortcuts learned

--- a/1st webinar (basic html and css)/links.html
+++ b/1st webinar (basic html and css)/links.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
+<!-- document type html -->
 <html lang="en">
+ <!-- html language english    -->
 <head>
+    <!-- in head we define meta data (info about info) -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!this above line means that we do not have to perform horizontal scroll in our web page>
+    <!-- this above line means that we do not have to perform horizontal scroll in our web page -->
 
 
     <title>Document</title>
