--- a/1st webinar (basic html and css)/intro.html
+++ b/1st webinar (basic html and css)/intro.html
@@ -1,6 +1,6 @@
 <html >
 <body>
-
+<!-- basic html  -->
     hello world
     <h1>heading</h1>
     <h2>heading</h2>
@@ -25,6 +25,9 @@
     &quot for quotation
     <br>
     <br>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, ipsam dolorum vel sunt incidunt voluptatem doloremque at soluta, laboriosam aperiam consequatur cupiditate nisi! Aperiam reprehenderit fuga aliquam neque placeat voluptate? Consequuntur nulla maiores provident illum reiciendis odit dolor officia hic!
+
+    </p>
     
     <a href="#orderd list">go to ordered list starting with b</a>    <!links>
 
