--- a/assignments/madmathsform.html
+++ b/assignments/madmathsform.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MadMaths Form</title>
     <link href="form.css" rel="stylesheet">
 </head>
+
 <body>
 
     <h1 align="center">MadMaths</h1>
     <br><br><br>
-<div>
-    Enter your name <input type="text" placeholder="Your name">
-    <br>
-    Enter your class <select>
-        <option>8th</option>
-        <option>9th</option>
-    </select>
-    <br>    
-    Enter your school name <input type="text" placeholder="School name" required>
-    <br>
-    Enter your date of birth <input type="date">
-    <br>
-    Enter your address <input type="text" placeholder="address">
-    <br>
-    Enter your phone number <input type="tel" placeholder="phone number" maxlength="10">
-    <br>
-    <br>
-    <br>
-    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+    <form action="data.php">
+        <!-- in above line action attribute specifies where to store the data of the form submitted -->
+        <div>
+            <label for="name">Enter your name </label>
+            <!-- by creating label if we select on enter your name the input   box will automatically selected -->
+            <input type="text" placeholder="Your name" id="name">
+        </div>
+        <div>
+            Enter your class <select>
+                <option>8th</option>
+                <option>9th</option>
+            </select>
+        </div>
+        <div>
+            Enter your school name <input type="text" placeholder="School name" required>
+        </div>
+        <div>
+            Enter your date of birth <input type="date">
+        </div>
+        <div>
+            Enter your address <input type="text" placeholder="address">
+        </div>
+        <div>
+            Enter your phone number <input type="tel" placeholder="phone number" maxlength="10">
+        </div>
+        <div>
+            are u eligible <input type="checkbox" checked>
+        </div>
+        <div>
+            write about yourself
+            <br><textarea name="my text" id="" cols="30" rows="10"></textarea>
+        </div>
+        <div>
+            <input type="submit" name="my submit">
+            <input type="reset" name="my reset">
+        </div>
 
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>    
-</div>
-<button>Submit</button>
-
+    </form>
 
 
 </body>
+
 </html>
