website created using css (design only) lease enter the commit message for your changes. Lines starting

--- a/assignments/navigation bar.html
+++ b/assignments/navigation bar.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navigation bar</title>
     <style>
+        body{
+            background: url(bg.jpg);
+            background-repeat: no-repeat;
+            background-size: 1280px 650px;
+            background-position-y: 50px;
+        }
         .navbar {
             background-color: #8080805c;
             overflow: auto;
             border-radius: 5px;
-            width:90vw;
-            margin-left: 20px;
+            width:500px;
+            margin: auto;
         }
 
         .item {
