folder name changed

--- a/webinar (basic html and css)/flexbox.html
+++ b/webinar (basic html and css)/flexbox.html
@@ -39,6 +39,7 @@
             background-color: yellowgreen;
             flex-grow: 3;
             flex-basis: 300px;
+            /* above line decides width of flex box  */
         }
         #item-3{
             background-color: tomato;
