--- a/webinar (basic html and css)/media querries.html
+++ b/webinar (basic html and css)/media querries.html
@@ -44,7 +44,7 @@
         }
 
         @media only screen and (min-width: 1201px) {
-            #item-4only screen and  {
+            #item-4{
                 display: block;
                 background-color: cyan;
             }
