--- a/javascript basics/alert prompt  confirm.html
+++ b/javascript basics/alert prompt  confirm.html
@@ -12,17 +12,27 @@
 </body>
 <script>
     //pop out messeage or alert
-    alert("this is a message");
-    let name = prompt("what is your name?", "guest");
-    console.log(name);
-    let deletepost = confirm("do you realy want to delete the post?");
-    console.log(deletepost);
+    // alert("this is a message");
+    // let name = prompt("what is your name?", "guest");
+    // console.log(name);
+    // let deletepost = confirm("do you realy want to delete the post?");
+    // console.log(deletepost);
+
+
+    let age = prompt("Enter your age ",15);
+    if(age<18){
+        alert("Sorry u are not allowed")
+    }else{
+        alert("u are allowed")
+    }
+
+
+
+ 
 
 
 
 
-
-    
 </script>
 
 </html>
