new functionality delete added

--- a/mysql_express_server/public_static/index.html
+++ b/mysql_express_server/public_static/index.html
@@ -20,6 +20,13 @@
     <br>
     <br>
 
+    <h2>Delete person</h2>
+    <input id="delete_age" type="number" name="delete_age" placeholder="age"><br>
+    <button id="delete">delete</button>
+    <br>
+    <br>
+    <br>
+
     <table id="persons" border="1" cellspacing="10" cellpadding="10">
         <tr>
             <th>NAME</th>
