--- a/sequalizeExpressshoppingApp/public/cart.html
+++ b/sequalizeExpressshoppingApp/public/cart.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ecommerce website</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
@@ -15,21 +14,11 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="shop.js"></script>
-    <script src="index.js"></script>
-    <script src="cart.js"></script>
-
-    <style>
-        .row{
-            margin-left: 83px;
-            margin-top: 50px;
-        }
-    </style>
 </head>
-
 <body>
+    
 
-
-    <h1 style="text-align: center">Shop</h1>
+    <h1 style="text-align: center">Cart</h1>
     <div class="container row" id="productlist">
 
         <div class="card col-md mx-auto" style="width: 18rem;">
@@ -54,11 +43,6 @@
 
     </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <a href="addproducts.html">  add more products</a>
-</body> 
 
-</html>  
+</body>
+</html>
