--- a/assignments/website gym/public/index.html
+++ b/assignments/website gym/public/index.html
@@ -15,7 +15,7 @@
 
 <div class="header">
     <div class="items" id="left">
-        <img src="/images/logo.jpg" alt="logo">
+        <img src="../images/logo.jpg" alt="logo">
         best gym
     </div>
 
