added username functionality

--- a/socket_io/public/index.html
+++ b/socket_io/public/index.html
@@ -15,9 +15,18 @@
     <h2>socket.io example</h2>
     <br><br>
 
-    <input type="text" id="input">
-    <button id="submit">submit</button>
-    <ul id="msglist"></ul>
+    <div id="login-div">
+        <input type="text" placeholder="username" id="login">
+        <button id="loginbtn">login</button>
+    </div>
+
+    <div id="chat-div" style="display: none;">
+        <input type="text" id="input">
+        <button id="submit">submit</button>
+        <ul id="msglist"></ul>
+    </div>
+
+
 </body>
 
 </html>
