fare calculation and rate card functionality added

--- a/development/UnitTesting_farecalculator/public_static/index.html
+++ b/development/UnitTesting_farecalculator/public_static/index.html
@@ -16,10 +16,13 @@
 
         <br><br><br>
         <input type="number" placeholder="km traveled" id="km"><br>
-        <input type="number" placeholder="time in minutes" id="min">
-        <button id="calculate">calculate</button>
+        <input type="number" placeholder="time in minutes" id="min"><br>
+        <button id="calculate">calculate</button><br><br>
     </div>
     <div id="fare">
+    </div>
+    <button id="rate">Show Rates</button><br><br>
+    <div id="rate-div">
 
     </div>
 </body>
