--- a/development/html/madmathsform.html
+++ b/development/html/madmathsform.html
@@ -49,8 +49,8 @@
             <input type="submit" name="my submit">
             <input type="reset" name="my reset">
         </div>
-
-
+        <a href="https://www.google.com/" target="_parent">go to google</a>
+        <!-- target parent opens link in that page only  -->
     </form>
 
 
