--- a/development/html/madmathsform.html
+++ b/development/html/madmathsform.html
@@ -51,6 +51,7 @@
         </div>
         <a href="https://www.google.com/" target="_parent">go to google</a>
         <!-- target parent opens link in that page only  -->
+        <!-- target blank open link in new tab -->
     </form>
 
 
