--- a/development/html/madmathsform.html
+++ b/development/html/madmathsform.html
@@ -55,6 +55,16 @@
     </form>
 
 
+    <br><br><br>
+
+    <!-- this forms searches on google what u type in box -->
+    <form action="http://google.com/search">
+        <!-- here name acts as an id and for google serch name must be q  -->
+        <input name="q">
+        <button type="submit">Search</button>
+        <button type="reset">reset</button>
+    </form>
+    <br><br><br>
 </body>
 
 </html>
