--- a/assignments_and_practise/node_encoder/public/index.html
+++ b/assignments_and_practise/node_encoder/public/index.html
@@ -14,7 +14,7 @@
     <button id="encode">Encode</button>
 
     <form action="/msg" method="GET">
-        <input id="disp" type="text">
+        <input id="disp" type="text" name="disp">
         <br>
         <button>Encrypt</button>
         <br>
